# tauri-plugin-sqlite

./: Cargo.toml  LICENSE  README.md  build.rs  package.json  tsconfig.json
examples/tauri-app/: jsconfig.json  package.json
examples/tauri-app/src/: App.svelte  main.js
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: commands.rs  decode.rs  error.rs  lib.rs  wrapper.rs
