[package]
name = "tauri-plugin-sqlite"
version = "0.1.0"
authors = [ "return764" ]
description = "tauri plugin for sqlite"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-sqlite"

[dependencies]
tauri = { version = "2.2.4" }
serde = "1.0"
thiserror = "2"
sqlx = { version = "0.8.5", features = ["sqlite", "runtime-tokio", "time", "json"]}
tokio = { version = "1.44.2", features = ["sync"]}
indexmap = { version = "2.9.0", features = ["serde"]}
futures-core = "0.3.31"
serde_json = "1.0.140"

[build-dependencies]
tauri-plugin = { version = "2.0.3", features = ["build"] }
